# OwlContext

./: .gitignore  INSTALLER-SUMMARY.md  README-图标更新说明.md  README-安装程序构建.md  README-构建错误修复.md  UPGRADE-TO-0.1.4.md  build-installer.bat  build.bat  install-setup.iss  pyproject.toml  同步完成报告.md  快速构建安装程序.md
.github/workflows/: release.yml
config/: config.yaml  prompts_en.yaml  prompts_zh.yaml  quick_start_default.md
frontend/: build-python.js  build-win-no-typecheck.bat  electron-builder.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.sh
frontend/scripts/: build-python.js  copy-prebuilt-backend.js
frontend/src/main/: backend.ts  index.ts
frontend/src/main/background/os/: Power.ts
frontend/src/main/background/task/: cache-value.ts  screen-monitor-task.ts
frontend/src/main/services/: AppService.ts  TrayService.ts
frontend/src/main/utils/: env.ts  file.ts  get-capture-sources.ts  init.ts  mac-window-manager.ts
frontend/src/renderer/: index.html
frontend/src/renderer/src/components/Loading/: index.tsx
frontend/src/renderer/src/components/Sidebar/: index.tsx
frontend/src/renderer/src/hooks/: use-init-prepare-data.ts
frontend/src/renderer/src/pages/files/: Files.tsx
frontend/src/renderer/src/pages/home/: HomePage.tsx  home-page.tsx
frontend/src/renderer/src/pages/screen-monitor/: ScreenMonitor.tsx  screen-monitor.tsx
frontend/src/renderer/src/pages/settings/: settings.tsx
opencontext/models/: enums.py
opencontext/storage/backends/: sqlite_backend.py
opencontext/web/templates/: base.html  chat.html  monitoring.html
scripts/: check-icon.bat  check-startup.bat  clean-build.bat  fix-rcedit-error.bat  generate-ico.js
(+2 files in other folders)
